fix(content): changed the temp sln for adding proper spacing and alignment for .header and the items in it.

--- a/-/-/brand/_index.scss
+++ b/-/-/brand/_index.scss
@@ -1,6 +1,5 @@
 .brand {
   display: flex;
-  align-self: flex-start;
   align-items: center;
   gap: 8px;
 
