--- a/-/-/header/_index.scss
+++ b/-/-/header/_index.scss
@@ -11,6 +11,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
   column-gap: 2rem;
   row-gap: 1rem;
 }
